# obsidian-mcp-server

./: LICENSE  README.md  main.ts  manifest.json  package-lock.json  package.json  styles.css
python-packages/obsidian-mcp-server/: .gitignore  pyproject.toml
python-packages/obsidian-mcp-server/src/obsidian_mcp_server/: __init__.py  __main__.py  local_rest_api.py  mcp_server.py
